--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,5 @@
-main img{
-       max-height: 250px;
-}
-main .card-last img {
+
+ .container  img {
     max-height: 200px;
     padding: 10px 10px;
-}
+} 
